<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_Simulador">

    <TextView
        android:id="@+id/txt_numero"
        android:layout_width="369dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="265dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numero"
        android:background="@color/fundo_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_1"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_4"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_7"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_11"
                android:layout_margin="1dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_2"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_5"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_8"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_0"
                android:layout_margin="1dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_3"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_6"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_9"
                android:layout_margin="1dp"/>

            <Button
                android:id="@+id/btn_22"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/fundo_botao"
                android:text="@string/btn_22"
                android:layout_margin="1dp"/>
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_ligar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/btn_Lp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="LP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_ligar" />

</android.support.constraint.ConstraintLayout>